Actions
Bug #11168
closedkrb5: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from /code/illumos-gate/proto/root_i386/usr/include/iso/stdio_iso.h:53:0, from /code/illumos-gate/proto/root_i386/usr/include/stdio.h:82, from ../ss_internal.h:15, from ../listen.c:17: ../listen.c: In function 'ss_listen': /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:28:14: error: passing argument 5 of 'gl_trap_signal' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../listen.c:229:65: note: in expansion of macro 'NULL' if (gl_trap_signal(gl, SIGINT, GLS_DONT_FORWARD, GLS_ABORT, NULL)) { ^~~~ In file included from ../listen.c:25:0: /code/illumos-gate/proto/root_i386/usr/include/libtecla.h:1104:5: note: expected 'int' but argument is of type 'void *' int gl_trap_signal(GetLine *gl, int signo, unsigned flags, ^~~~~~~~~~~~~~ cc1: all warnings being treated as error
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit e41409bfa05152ed1ac94578d69a0444e4ab6904
commit e41409bfa05152ed1ac94578d69a0444e4ab6904 Author: Toomas Soome <tsoome@me.com> Date: 2019-06-25T20:35:37.000Z 11168 krb5: NULL pointer errors Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions